# trading-backtester

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/api/: server.py
src/app/: main.py
src/app/pages/: compare.py  dashboard.py  multi_asset.py  results.py  strategy.py
src/backtest/: comparison.py  engine.py  metrics.py  multi_asset.py  pdf_report.py  reports.py  walk_forward.py
src/data/: cache.py  indicators.py  yahoo_client.py
src/strategy/: executor.py  models.py  parser.py  templates.py  validator.py
tests/: test_backtest.py  test_data.py  test_multi_asset.py  test_parser.py
