[project]
name = "trading-backtester"
version = "1.0.0"
description = "Natural language-powered trading strategy backtester with AI critique"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["trading", "backtesting", "natural-language", "claude", "ai", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.36",
    "duckdb>=0.10.0",
    "pandas-ta>=0.3.14b1",
    "pandas>=2.0.0",
    "backtesting>=0.6.0",
    "quantstats>=0.0.62",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    "anthropic>=0.20.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
